--- a/index.html
+++ b/index.html
@@ -5,21 +5,25 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-1.11.1.js"></script>
     <script src="js/scripts.js"></script>
-    <title></title>
+    <title>Play Hangman!</title>
   </head>
-
   <body>
     <div class="container">
-
-      <form id="letters">
+      <div class="hangman">
+      </div>
+      <div class="pole">
+        <img src="css/pic/hanging.png">
+      </div>
+      <form id="guess">
         <div class="form-group">
           <label for="input"></label>
-          <input id="input" type="text">
+          <input id="letter" type="text" placeholder="enter letter here">
         </div>
-        <button type="submit" id="btn">Click here!</button>
+        <button type="submit" id="btn">Guess!</button>
       </form>
-      <p><span id="title"></span> </p>
+      <div class = "display"></div>
 
     </div>
   </body>
 </html>
+
